# jangada-docs-mcp

./: .dockerignore  .gitignore  .mcp.json  DEPLOY.md  Dockerfile  README.md  pyproject.toml  requirements-lambda.txt  requirements.txt  server.py  template.yaml
.github/workflows/: deploy.yml
docs/: capabilities.en.mdx  capabilities.mdx  cost.mdx  detect.en.mdx  documents.en.mdx  documents.mdx  errors.mdx  eval.en.mdx  eval.mdx  example-escritor-ia.mdx  example-fiscal-vision.mdx  example-pesquisa-agentes.en.mdx  example-pesquisa-agentes.mdx  example-reuniao-assistente.mdx  example-suporte-rag.en.mdx  example-suporte-rag.mdx  examples.mdx  extending.en.mdx  extending.mdx  flows.mdx  getting-started.en.mdx  getting-started.mdx  index.en.mdx  index.mdx  llm-gemini.mdx  llm-openai.mdx  llm-openrouter.en.mdx  llm-openrouter.mdx  migration-langchain.en.mdx  migration-langchain.mdx  parameters.en.mdx  prompts.mdx  providers.en.mdx  rag.en.mdx  retry-fallback.en.mdx  retry-fallback.mdx  stepback.en.mdx  streaming.mdx  tools.en.mdx  tutorial-agente-mcp.mdx  (+4 more)
jangada_docs_mcp/: __init__.py  asgi.py  server.py
jangada_docs_mcp/docs/: agents.en.mdx  agents.mdx  audio.en.mdx  audio.mdx  best-practices.en.mdx  best-practices.mdx  cache.en.mdx  cache.mdx  capabilities.en.mdx  capabilities.mdx  casos-de-uso.en.mdx  casos-de-uso.mdx  cost.en.mdx  cost.mdx  debug.en.mdx  debug.mdx  detect.mdx  errors.en.mdx  errors.mdx  example-assistente-pessoal.en.mdx  example-assistente-pessoal.mdx  example-escritor-ia.en.mdx  example-fiscal-vision.en.mdx  examples.en.mdx  (+47 more)
scripts/: sync-docs.sh
